# pymath

./: README.md  pyproject.toml  test.py  test.txt
core/: matrix.py  mymath.py  pymath.py
pymath/: __init__.py  cos.py  lagrange.py  linspace.py  newton.py  rect_integral.py  sqrt.py
pymath/matrix/: __init__.py  add.py  add.pyi  dot.py  dot.pyi  matrix.py  matrix.pyi  matrix_iter.py  matrix_typing.py  transpose.py  transpose.pyi
tests/: context.py
