[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = 'pymath-budnikov-as'
version = '0.1.2'
description = "A study math package."
readme = "README.md"
requires-python = '>=3.10.0'
dependencies = [
    'sympy>=1.9'
]

[project.urls]
repository = 'https://github.com/ded-otshelnik/pymath-git'